--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,13 +33,13 @@ layout: compress
                   <hr class="hr-line">
                   <h3 class="title">
                          <a class="btn zoombtn" href="{{ site.url }}/about">
-                         关于我们
+                         关于科瑞塔
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         文章
+                         交流分享
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         项目
+                         作品项目
                          </a>
                  </h3>
             </div>
