--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 		<ul class="dl-menu">
 			<li><a href="{{ site.url }}/">主页</a></li>
 			<li>
-				<a href="#">关于我们</a>
+				<a href="#">关于科瑞塔</a>
 				<ul class="dl-submenu">
 					<li>
 						<img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
@@ -86,9 +86,9 @@
 				</ul><!-- /.dl-submenu -->
 			</li>
 			<li>
-				<a href="#">文章</a>
+				<a href="#">交流分享</a>
 				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">全部文章</a></li>
+					<li><a href="{{ site.url }}/posts/">全部内容</a></li>
 					<li><a href="{{ site.url }}/tags/">全部标签</a></li>
 				</ul>
 			</li>
