--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
 				<a href="#">关于科瑞塔</a>
 				<ul class="dl-submenu">
 					<li>
-						<img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
+						<img src="https://7up.pics/images/2023/08/05/4c1f2763642077c6f496293b195b185df87a3d38.md.png" alt="{{ site.title }} photo" class="author-photo">
 						<h4>{{ site.title }}</h4>
 						<p>{{ site.description }}</p>
 					</li>
