--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
 				<ul class="dl-submenu">
 					<li>
 						<img src="https://7up.pics/images/2023/08/05/4c1f2763642077c6f496293b195b185df87a3d38.md.png" alt="{{ site.title }} photo" class="author-photo">
-						<h4>白北一介</h4>
+						<h4>{{ site.title }}</h4>
 						<p>{{ site.description }}</p>
 					</li>
 					<li><a href="{{ site.url }}/about/"><span class="btn btn-inverse">关于我们</span></a></li>
