--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,13 +33,13 @@ layout: compress
                   <hr class="hr-line">
                   <h3 class="title">
                          <a class="btn zoombtn" href="{{ site.url }}/about">
-                         关于科瑞塔
+                         About Me
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         交流分享
+                         Irrelevant Nonsense
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         作品项目
+                         Artwork
                          </a>
                  </h3>
             </div>
