--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -86,7 +86,7 @@
 				</ul><!-- /.dl-submenu -->
 			</li>
 			<li>
-				<a href="#">交流分享</a>
+				<a href="#">Irrelevant Nonsense</a>
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/posts/">All content</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
