--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
 				<a href="#">About Me</a>
 				<ul class="dl-submenu">
 					<li>
-						<img src="https://7up.pics/images/2023/08/05/4c1f2763642077c6f496293b195b185df87a3d38.md.png" alt="{{ site.title }} photo" class="author-photo">
+						<img src="https://bomuzhiya.github.io/assets/img/logo.png" alt="{{ site.title }} photo" class="author-photo">
 						<h4>Cypress-Ik727</h4>
 						<p>{{ site.description }}</p>
 					</li>
