--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,7 @@ layout: compress
                          Irrelevant Nonsense
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Artwork
+                         Project
                          </a>
                  </h3>
             </div>
