--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
 				<ul class="dl-submenu">
 					<li>
 						<img src="https://bomuzhiya.github.io/assets/img/logo.png" alt="{{ site.title }} photo" class="author-photo">
-						<h4>Cypress-Ik727</h4>
+						<h4>柏木枝崖</h4>
 						<p>{{ site.description }}</p>
 					</li>
 					<li><a href="{{ site.url }}/about/"><span class="btn btn-inverse">About Me</span></a></li>
